# open_ptrack

detection/: CMakeLists.txt  package.xml
detection/apps/: ground_based_people_detector_node.cpp  haardispada_node.cpp
detection/conf/: ground_based_people_detector_kinect1.yaml  haar_disp_ada_detector.yaml
detection/include/open_ptrack/detection/: detection.h  detection_source.h  ground_based_people_detection_app.h  ground_segmentation.h  haardispada.h  person_classifier.h
detection/include/open_ptrack/detection/impl/: ground_based_people_detection_app.hpp  ground_segmentation.hpp  person_classifier.hpp
detection/launch/: detector_depth.launch
detection/src/: detection.cpp  detection_source.cpp  haardispada.cpp
opt_msgs/: CMakeLists.txt  package.xml
opt_utils/: CMakeLists.txt  package.xml
opt_utils/apps/: roi_viewer.cpp
opt_utils/launch/: visualization.launch
scripts/: openptrack_install.sh
tracking/: CMakeLists.txt  package.xml
tracking/apps/: tracker_node.cpp
tracking/conf/: tracker.yaml
tracking/include/open_ptrack/tracking/: track.h  tracker.h
tracking/launch/: detection_and_tracking.launch  tracker.launch
tracking/src/: track.cpp  tracker.cpp
