<?xml version="1.0"?>
<package format="2">
  <name>detection</name>
  <version>0.0.0</version>
  <description>Module containing people detection algorithms.</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>opt_msgs</depend>
  <depend>opt_utils</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend> 
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend> 
  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!--cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" /-->
    <!--cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lhaar_disp_ada "/-->    
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
