<?xml version="1.0"?>
<package format="2">
  <name>opt_utils</name>
  <version>0.0.0</version>
  <description>Utility functions for Open PTrack</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>opt_msgs</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
</package>
