<?xml version="1.0"?>
<package format="2">
  <name>tracking</name>
  <version>0.0.0</version>
  <description>Module containing object/people tracking algorithms.</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>bayes</depend>
  <depend>cmake_modules</depend>
  <depend>cob_perception_msgs</depend>
  <depend>detection</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>opt_msgs</depend>
  <depend>opt_utils</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend> 
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

</package>
